<resources>
    <string name="app_name">fragments</string>
    <string name="frag_first_text">Fragment 1</string>
    <string name="frag_second_text">Fragment 2</string>
    <string name="button1_text">switch to Second Fragment</string>
    <string name="button2_text">switch to First Fragment</string>
    <string name="movie_title_text">TITLE</string>
    <string name="movie_vote_average_text">VOTE AVERAGE</string>
    <string name="movie_vote_count_text">VOTE COUNT</string>
    <string name="movie_original_language_text">ORIGINAL LANGUAGE</string>
    <string name="movie_popularity_text">POPULARITY</string>
    <string name="movie_release_date_text">RELEASE DATE</string>
    <string name="movie_overview_title">OVERVIEW</string>
    <string name="movie_poster_width">w200</string>
</resources>
